--- a/app/templates/maps/index.html
+++ b/app/templates/maps/index.html
@@ -1,3 +1,2 @@
-{% extends "base.html" %}
-{% block inside_body %}{% include 'maps/map.html' %}
-{% endblock %}
+{% extends 'base.html' %}
+{% block inside_body %} {% include 'maps/map.html' %} {% endblock %}
