--- a/app/templates/maps/index.html
+++ b/app/templates/maps/index.html
@@ -1,2 +1,2 @@
 {% extends 'base.html' %}
-{% block inside_body %} {% include 'maps/map.html' %} {% endblock %}
+{% block content %} <iframe src="/map" height="600px" width="600px"></iframe> {% endblock %}
