Blueprints, layout, map filters

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Map</title>
-</head>
-<body>
-    <div style="margin-left: auto; margin-right: auto" id="map">
-    {{_map}}
-    </div>
-
-</body>
-</html>
+{% extends 'base.html' %}
