--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,9 +12,9 @@
  <body class="loggedin">
  <nav class="site-header sticky-top py-1">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('home') }}"><i class="fas fa-home"></i> Home</a>
-  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('profile') }}"><i class="fas fa-user-circle"></i> Profile</a>
-  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('auth.home') }}"><i class="fas fa-home"></i> Home</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('auth.profile') }}"><i class="fas fa-user-circle"></i> Profile</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
    </div>
     </nav>
 
