--- a/app/templates/maps/index.html
+++ b/app/templates/maps/index.html
@@ -1,2 +1,2 @@
 {% extends 'base.html' %}
-{% block content %} <iframe src="/map" height="600px" width="600px"></iframe> {% endblock %}
+{% block content %} <iframe src="/map" class="p-3 w-100 h-100"></iframe> {% endblock %}
