--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,27 +1,26 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Register</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-  <!-- Google Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
- </head>
- <body style="background-color:#ccc;">
- <div class="container">
-   <div class="row main">
-    <div class="main-login main-center">
+{% extends 'base.html' %}
+{% block title %} Sign Up {% endblock %}
+{% block content %}
+<div class="row p-5">
+ <div class="col mt-auto mb-auto">
+  <div class="main-login main-center">
     <h5>Register New user or login existing account</h5>
-     <form action="{{ url_for('register') }}" method="post" autocomplete="off">
+     <form action="{{ url_for('auth.register') }}" method="post" autocomplete="off">
       <div class="form-group">
-       <label for="name" class="cols-sm-2 control-label">Your Name</label>
+       <label for="firstname" class="cols-sm-2 control-label">Your firstname</label>
        <div class="cols-sm-10">
         <div class="input-group">
          <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-         <input type="text" class="form-control" name="fullname" id="fullname"  placeholder="Enter your Name"/>
+         <input type="text" class="form-control" name="firstname" id="firstname"  placeholder="Enter your firstname"/>
+        </div>
+       </div>
+      </div>
+      <div class="form-group">
+       <label for="lastname" class="cols-sm-2 control-label">Your lastname</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="lastname" id="lastname"  placeholder="Enter your lastname"/>
         </div>
        </div>
       </div>
@@ -70,15 +69,12 @@
         {% endwith %}
        <input type="submit" value="Register" class="form-control btn btn-primary " name="">
        <p style="padding:5px;">
-       <a href="{{ url_for('login') }}" class="btn btn-dark ">Login</a></p>
+       <a href="{{ url_for('auth.login') }}" class="btn btn-dark ">Login</a></p>
 
       </div>
 
      </form>
     </div>
-   </div>
-  </div>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- </body>
-</html>
+ </div>
+</div>
+{% endblock %}
