--- a/app/static/styles/css/main.css
+++ b/app/static/styles/css/main.css
@@ -24,7 +24,7 @@ nav{
 }
 .main{
     position: center;
-    background-color: aquamarine;
+    background-color: #51585e;
     align-content: center;
     height: 73vh;
     width: 70vw;
@@ -38,20 +38,20 @@ footer{
 
 .login-box
  {
-    height: 50%;
+    height: 65vh;
     border: 1px solid grey;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 10%;
     position: relative;
     box-shadow: 21px 12px 24px 10px rgba(0, 0, 0, .5);
     background: #dadada;
+    opacity: unset;
  }
  .login-header
  {
   text-align: center;
   font-family: "vardhana",cursive;
-  font-size: 35px;
+  font-size: 150%;
   background: linear-gradient(to bottom, #00bfff 0%, #5b6d7c 100%);
   color:#fff;
   position: relative;
@@ -119,7 +119,6 @@ padding: 8px 12px !important;
    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
 }
 .main-center{
- margin-top: 30px;
  margin-left: 15%;
     margin-right: 15%;
    padding: 10px 40px;
