--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,1 +1,78 @@
 {% extends 'base.html' %}
+{% block title %} Sign Up {% endblock %}
+{% block content %}
+<div class="p-3">
+  <div class="main-login main-center">
+    <h5>Register New user or login existing account</h5>
+     <form action="{{ url_for('auth.register') }}" method="post" autocomplete="off">
+      <div class="form-group">
+       <label for="firstname" class="cols-sm-2 control-label">Your firstname</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="firstname" id="firstname"  placeholder="Enter your firstname"/>
+        </div>
+       </div>
+      </div>
+      <div class="form-group">
+       <label for="lastname" class="cols-sm-2 control-label">Your lastname</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="lastname" id="lastname"  placeholder="Enter your lastname"/>
+        </div>
+       </div>
+      </div>
+      <div class="form-group">
+       <label for="email" class="cols-sm-2 control-label">Your Email</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+        </div>
+       </div>
+      </div>
+
+      <div class="form-group">
+       <label for="username" class="cols-sm-2 control-label">Username</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+         <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username" required>
+        </div>
+       </div>
+      </div>
+
+      <div class="form-group">
+       <label for="password" class="cols-sm-2 control-label">Password</label>
+       <div class="cols-sm-10">
+        <div class="input-group">
+         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+         <input type="password" class="form-control" name="password" placeholder="Password" id="password" required  placeholder="Enter your Password"/>
+        </div>
+       </div>
+      </div>
+
+      <div class="form-group ">
+        {% with messages = get_flashed_messages()  %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+       <input type="submit" value="Register" class="form-control btn btn-primary " name="">
+       <p style="padding:5px;">
+       <a href="{{ url_for('auth.login') }}" class="btn btn-dark ">Login</a></p>
+
+      </div>
+
+     </form>
+    </div>
+</div>
+{% endblock %}
