--- a/app/templates/rides.html
+++ b/app/templates/rides.html
@@ -1,25 +1,38 @@
 {% extends 'base.html' %}
 {% block title %} Your rides {% endblock %}
 {% block content %}
+<div class="row">Te kolory są tylko poglądowe dla divów</div>
     {% if not rides %}
         <h2>Niestety nie masz żadnych przejazdów. Dodaj nowy :)</h2>
     {% else %}
         {% for ride in rides %}
+
             <div class="row p-1" >
                 <div class="col-3" style="background-color: #86b7fe" >
                     <div style="width: 100px; height: 100px; background-color: #ffc720"> TUTAJ MINIATURA MAPY W IFRAME</div>
                 </div>
                 <div class="col-7" style="background-color: #0f5132">
                     <h2>Opis trasy</h2>
+                    <h3>{{ ride.name }}</h3>
                 </div>
-                <div class="col-2" style="background-color: #0c63e4">
+                <div class="col-2 p-4" style="background-color: #0c63e4">
                     <button class="btn btn-light">Wyświetl trase.</button>
                 </div>
             </div>
         {% endfor %}
     {% endif %}
-    <div class="row p-1">
-        <button class="btn btn-primary">Dodaj przejazd!</button>
+
+
+    <div class='div-primary'>
+    <h1>Dodaj przejazd z dysku!</h1>
+    <form action = '/upload_file' method = 'POST' enctype = 'multipart/form-data'>
+    <div class = 'row'>
+        <div class = 'frm-fld-input'><input type = 'file' class = 'div-input-file' name = 'file_name' id = 'file_name'></div>
     </div>
+    <div class = 'row'>
+        <div class="m-2"><button type="submit" class="btn btn-primary btn">Dodaj przejazd!</button></div>
+    </div>
+    </form>
+</div>
 {% endblock %}
 
