Zmiany w zapisie map i tworzeniu folium map

--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -9,7 +9,7 @@
     <table>
         <tr>
             <td>Name:</td>
-            <td>{{ account['fullname'] }}</td>
+            <td>{{ account['firstname'] }} {{account['lastname']}}</td>
         </tr>
   <tr>
             <td>Username:</td>
