Add max_map button, fixes in footer, fixes css

--- a/app/static/styles/css/bootstrap-reboot.rtl.css
+++ b/app/static/styles/css/bootstrap-reboot.rtl.css
@@ -418,6 +418,6 @@ progress {
 }
 
 [hidden] {
-  display: none !important;
+  display: none ;
 }
 /*# sourceMappingURL=bootstrap-reboot.rtl.css.map */
