--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,7 +64,6 @@
 
       <footer class="bg-light  bd-footer py-3">
                 {% block footer %}
-          <div class=" py-4 ">
             <div class="row justify-content-center">
               <div class="col-lg-3 mb-3">
                 <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="FYBR">
@@ -72,14 +71,11 @@
                 </a>
               </div>
               <div class="col-6 col-lg-2 mb-3">
-                <h5>Community</h5>
-                <ul class="list-unstyled">
-                  <li class="mb-2"><a href="">Issues</a></li>
-                  <li class="mb-2"><a href="">Discussions</a></li>
-                </ul>
+                 <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="FYBR">
+                  <span class="fs-5">Community</span>
+                </a>
               </div>
             </div>
-          </div>
                     {% endblock %}
         </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
