--- a/app/static/styles/css/bootstrap-reboot.css
+++ b/app/static/styles/css/bootstrap-reboot.css
@@ -420,7 +420,7 @@ progress {
 }
 
 [hidden] {
-  display: none !important;
+  display: none ;
 }
 
 /*# sourceMappingURL=bootstrap-reboot.css.map */
