--- a/app/static/styles/css/main.css
+++ b/app/static/styles/css/main.css
@@ -9,11 +9,11 @@ body{
     overflow-x:hidden;
 }
 header{
-    background-color: darkgray !important;
+    background-color: darkgray ;
     opacity: 0.8;
 }
 a{
-    color: black !important;
+    color: black ;
     font-style: oblique;
     font-size: larger;
 }
@@ -26,13 +26,14 @@ nav{
     position: center;
     background-color: #51585e;
     align-content: center;
-    height: 73vh;
+    height: 84vh;
     width: 70vw;
 }
 
 footer{
     height: 20vh;
 }
+
 
 
 
@@ -44,7 +45,7 @@ footer{
     margin-right: 15%;
     position: relative;
     box-shadow: 21px 12px 24px 10px rgba(0, 0, 0, .5);
-    background: #dadada;
+    background: lightgray;
     opacity: unset;
  }
  .login-header
@@ -52,7 +53,7 @@ footer{
   text-align: center;
   font-family: "vardhana",cursive;
   font-size: 150%;
-  background: linear-gradient(to bottom, #00bfff 0%, #5b6d7c 100%);
+  background: linear-gradient(to bottom, #11ff00 0%, #5b6d7c 100%);
   color:#fff;
   position: relative;
        box-shadow: 1px 3px 14px  rgba(0, 0, 0, .5);
@@ -110,19 +111,19 @@ input::-webkit-input-placeholder {
 
 }
 .form-control {
-   height: auto!important;
-padding: 8px 12px !important;
+   height: auto;
+padding: 8px 12px ;
 }
 .input-group {
-   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
-   -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
-   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21);
+   -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21);
+   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21);
 }
 .main-center{
  margin-left: 15%;
     margin-right: 15%;
    padding: 10px 40px;
-background:#5b6d7c;
+background: lightgray;
     color: #FFF;
    text-shadow: none;
 -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
