upload_map_view

--- a/app/templates/maps/new.html
+++ b/app/templates/maps/new.html
@@ -1,6 +1,1 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-<div>{{mapa|safe}}</div>
-<div style="background-color: black;">qwdqwdqwdqwd</div>{% endblock %}
+{{mapa|safe}}
