--- a/app/templates/rides.html
+++ b/app/templates/rides.html
@@ -13,10 +13,12 @@
                 </div>
                 <div class="col-7" style="background-color: #0f5132">
                     <h2>Opis trasy</h2>
-                    <h3>{{ ride.name }}</h3>
+                    <h3>{{ride.name}}</h3>
                 </div>
                 <div class="col-2 p-4" style="background-color: #0c63e4">
-                    <button class="btn btn-light">Wyświetl trase.</button>
+                    <form action='/view/{{ ride.id }}' method="post" autocomplete="off">
+                    <button class="btn btn-light" type="submit">Wyświetl trase.</button>
+                    </form>
                 </div>
             </div>
         {% endfor %}
